--- a/css/index.css
+++ b/css/index.css
@@ -139,7 +139,7 @@ body {
 }
 /********************************************* header *****************************************/
 header {
-  /* display: flex; */
+   display: flex; 
 }
 
 .logo {
