--- a/css/index.css
+++ b/css/index.css
@@ -139,17 +139,24 @@ body {
 }
 /********************************************* header *****************************************/
 header {
-   display: flex; 
+   display: flex;
+   align-items: baseline; 
 }
 
 .logo {
   margin-right: 25px;
 }
 
+nav {
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+}
+
 nav a {
   color: black;
   text-decoration: none;
-  width: 60%;
+  width: 100%;
   padding: 20px 2%;
   font-size: 14px;
 }
