--- a/css/index.css
+++ b/css/index.css
@@ -376,4 +376,16 @@ button {
   border-radius: 8px;
   font-size: 16px;
   background-color: white;
+  
+}
+
+.p-box {
+    margin: 25px;
+  margin-left: 0;
+  padding: 0%;
+}
+
+.b-box {
+    margin: 25px;
+    margin-left: 0;  
 }
