fix all sections

--- a/css/index.css
+++ b/css/index.css
@@ -320,14 +320,14 @@ header {
   border-bottom: 1px dotted black;
   width: 100%;
   margin: 15px 15px 15px 0;
-  padding: 15px;
+  padding: 15px 15px 15px 0;
 }
 
 .second-box {
   border-bottom: 1px dotted black;
   width: 100%;
   margin: 15px 0 15px 15px;
-  padding: 15px;
+  padding: 15px 0 15px 15px;
 }
 
 .bottom-box {
@@ -340,14 +340,14 @@ header {
   border-bottom: 1px dotted black;
   width: 100%;
   margin: 15px 15px 15px 0;
-  padding: 15px;
+  padding: 15px 15px 15px 0;
 }
 
 .fourth-box {
   border-bottom: 1px dotted black;
   width: 100%;
   margin: 15px 0 15px 15px;
-  padding: 15px;
+  padding: 15px 0 15px 15px;
 }
 
 .bottom-section {
